--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practica</title>
+    <title>Hola Mundo</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="js-compiler/compiler.js"></script>
   </body>
 </html>
