--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="bundles/styles.css" />
     <title>Hola Mundo</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="js-compiler/compiler.js"></script>
+    <script src="bundles/main.js"></script>
   </body>
 </html>
